--- a/RenderFun.UI/MainWindow.axaml
+++ b/RenderFun.UI/MainWindow.axaml
@@ -2,9 +2,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:avalonia="clr-namespace:RenderFun.Avalonia"
+        xmlns:ui="clr-namespace:RenderFun.UI"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="RenderFun.Avalonia.MainWindow"
-        Title="RenderFun.Avalonia">
-        <avalonia:ClayCanvas/>
+        x:Class="RenderFun.UI.MainWindow"
+        Title="RenderFun.UI">
+        <ui:ClayCanvas/>
 </Window>
